--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=PROYECTO_FINAL
+application.title=airline-reservations-system
 application.vendor=espin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PROYECTO_FINAL.jar
+dist.jar=${dist.dir}/airline-reservations-system.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/PROYECTO_FINAL
+dist.jlink.output=${dist.jlink.dir}/airline-reservations-system
 endorsed.classpath=
 excludes=
 includes=**
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=PROYECTO_FINAL
+jlink.launcher.name=airline-reservations-system
 main.class=presentacion.FrmPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
